# headcannon-core

./: .gitignore  Directory.Build.props  LICENSE  README.md  pixi.toml
cpp/: CMakeLists.txt
cpp/include/cameraunlock/config/: ini_reader.h
cpp/include/cameraunlock/data/: position_data.h  position_settings.h  tracking_pose.h
cpp/include/cameraunlock/hooks/: hook_manager.h
cpp/include/cameraunlock/input/: hotkey_poller.h
cpp/include/cameraunlock/math/: angle_utils.h  deadzone_utils.h  quat4.h  rotation_utils.h  smoothing_utils.h  vec3.h
cpp/include/cameraunlock/memory/: pattern_scanner.h
cpp/include/cameraunlock/processing/: center_offset_manager.h  neck_model.h  position_interpolator.h  position_processor.h  tracking_processor.h
cpp/include/cameraunlock/protocol/: opentrack_packet.h  polling_udp_receiver.h  socket_types.h  udp_receiver.h  udp_socket.h
cpp/include/cameraunlock/rendering/: crosshair_projection.h  dx11_overlay.h  dx12_overlay.h
cpp/include/headcannon/config/: ini_reader.h
cpp/include/headcannon/data/: tracking_pose.h
cpp/include/headcannon/hooks/: hook_manager.h
cpp/include/headcannon/input/: hotkey_poller.h
cpp/include/headcannon/math/: angle_utils.h  deadzone_utils.h  rotation_utils.h  smoothing_utils.h
cpp/include/headcannon/memory/: pattern_scanner.h
cpp/include/headcannon/processing/: center_offset_manager.h  tracking_processor.h
cpp/include/headcannon/protocol/: opentrack_packet.h  polling_udp_receiver.h  udp_receiver.h
cpp/include/headcannon/rendering/: crosshair_projection.h  dx12_overlay.h
cpp/src/config/: ini_reader.cpp
cpp/src/data/: tracking_pose.cpp
cpp/src/hooks/: hook_manager.cpp
cpp/src/input/: hotkey_poller.cpp
cpp/src/math/: angle_utils.cpp  deadzone_utils.cpp  smoothing_utils.cpp
cpp/src/memory/: pattern_scanner.cpp
cpp/src/processing/: center_offset_manager.cpp  tracking_processor.cpp
cpp/src/protocol/: opentrack_packet.cpp  polling_udp_receiver.cpp  udp_receiver.cpp  udp_socket.cpp
cpp/tests/: CMakeLists.txt  math_tests.cpp  protocol_tests.cpp  test_main.cpp
csharp/: CameraUnlock.Core.sln  HeadCannon.Core.sln
data/: games.json
powershell/: AssemblyPatching.psm1  DevDeploy.psm1  GamePathDetection.psm1  ModDeployment.psm1  ModLoaderSetup.psm1  ReleaseWorkflow.psm1
scripts/: check-loader-arch.ps1  find-game.ps1  (+9 more)
(+228 files in other folders)
